[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonino Cangialosi", email = "ninocangialosi@yahoo.it" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
advent-of-code-2025 = "advent_of_code_2025:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
